crates/anymount-tui/src/widgets/mounts_list/snapshots/connected_mount_row_selected.snap
---
source: crates/anymount-tui/src/widgets/mounts_list/mount_row.rs
expression: terminal.backend()
---
" ┌─────────────────────────────────────────────────────────────────────────────┐"
" │ ●  test                 /test                            test    [ ⇐ ][ ↵ ] │"
" └─────────────────────────────────────────────────────────────────────────────┘"
