crates/anymount-tui/src/widgets/mounts_list/snapshots/disconnected_mount_row.snap
---
source: crates/anymount-tui/src/widgets/mounts_list/mount_row.rs
expression: terminal.backend()
---
"┌─────────────────────────────────────────────────────────────────────────────┐│"
"│ ○  test                 /test                            test               ││"
"└─────────────────────────────────────────────────────────────────────────────┘│"
