crates/anymount-tui/src/widgets/mounts_list/snapshots/mounts_list_scroll_resize.snap
---
source: crates/anymount-tui/src/widgets/mounts_list/mounts_list.rs
expression: terminal.backend()
---
"┌────────────────────────────────────────────────────────────────────────────┐│▲"
"│ ○  Third               /mnt/third                       local              ││║"
"├────────────────────────────────────────────────────────────────────────────┤│█"
"│ ○  Fourth              /mnt/fourth                      local              ││█"
"└┬───────────────────────────────────────────────────────────────────────────┴┤█"
" │ +  Add                                                               [ ↵ ] │█"
" └────────────────────────────────────────────────────────────────────────────┘▼"
"       j↑ select ↓k             ⇐ disconnect connect ⇒             info ↵       "
